lang/tests/contract/sol/ui/fail/03-tuple-unit-return.stderr
error[E0277]: the trait bound `(): You_Should_Use_An_Valid_Element_Type` is not satisfied
  --> $DIR/03-tuple-unit-return.rs:12:31
   |
12 |         pub fn noop(&self) -> ((), ()) {
   |                               ^^^^^^^^ the trait `You_Should_Use_An_Valid_Element_Type` is not implemented for `()`
   |
   = note: required because of the requirements on the impl of `You_Should_Use_An_Valid_Return_Type` for `((), ())`
